[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/CourierPrime-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/draw_neurons.gd" type="Script" id=2]
[ext_resource path="res://fonts/debug_monospace.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://scripts/draw_synapses.gd" type="Script" id=5]
[ext_resource path="res://scripts/drawing_board.gd" type="Script" id=6]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0.823529, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 64

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 20
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="draw" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="back" type="Node2D" parent="draw"]
z_index = -1
script = ExtResource( 5 )

[node name="back2" type="Node2D" parent="draw"]
z_index = -1
script = ExtResource( 5 )

[node name="Label" type="RichTextLabel" parent="draw"]
margin_left = 32.0
margin_top = 26.0
margin_right = 559.0
margin_bottom = 558.0
custom_fonts/normal_font = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="drawingBoard" type="TextureRect" parent="."]
margin_left = 350.0
margin_top = 140.0
margin_right = 414.0
margin_bottom = 204.0
rect_scale = Vector2( 5, 5 )
texture = SubResource( 2 )
stretch_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="btn_clear" type="Button" parent="."]
margin_left = 352.0
margin_top = 83.0
margin_right = 487.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="drawingBoard" to="drawingBoard" method="_on_drawingBoard_mouse_entered"]
[connection signal="mouse_exited" from="drawingBoard" to="drawingBoard" method="_on_drawingBoard_mouse_exited"]
[connection signal="pressed" from="btn_clear" to="drawingBoard" method="_on_btn_clear_pressed"]
